  * Improved PeriodicBoundary support
  * Refactored, parallelized SparsityPattern generation
  * Weighted Patch Recovery Error Estimator suppport
  * Relocated header files, e.g.
      #include "dof_map.h" becomes
      #include "libmesh/dof_map.h"
    this will be strictly enforced in the next release.
  * ParallelMesh fixes
  * PGI, Sun Studio compiler portability fixes
  * Improved Abaqus reader support
  * Improved UCDIO writer support
  * Output only a subset of variables from EquationSystems
  * Run-time floating point exception trapping via --enable-fpe
  * Refreshed packaged METIS and ParMETIS to latest versions
  * PETSc-3.3, SLEPc 3.3 support
  * Trilinos-11 support
  * Mac OSX 10.8 "Mountain Lion" fixes
  * New Examples:
     o systems_of_equations 4, 5, 6: 2D and 3D linear elasticity
     o reduced_basis_ex5: 3D linear elasticity with the Reduced Basis method
     o reduced_basis_ex6: Empirical interpolation method for a geometrically parametrized domain in 3D
     o reduced_basis_ex7: Complex-valued Reduced Basis problem modeling an acoustic horn
  

0.7.2 -> 0.7.3
  * Templated FunctionBase and subclass functors
  * Functor-based versions of more system APIs
  * Integrated function parser based functor
  * More flexible PetscMatrix responds to -mat_type
  * Elem::close_to_point() method for contact problems
  * Heterogenous constraint equation support
  * Dirichlet constraint equation support
  * More methods are ParallelMesh-compatible
  * Mesh extrusion generation
  * UniformRefinement error estimates for more adjoint options
  * Element truth table written in ExodusII output
  * GetPot detection of overridden variables
  * Reorganized examples by category
  * C++11 compatibility fixes
  * Many assorted bug fixes

0.7.1 -> 0.7.2
  * Discontinuous hierarchic FE basis
  * PatchRecoveryErrorEstimator patch reuse option
  * New partitioning-aware Patch construction option
  * More efficient adjoint solves with PETSc
  * New projection example utility